--- a/template/android/app/src/main/res/values/strings.xml
+++ b/template/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">template</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey"></string>
 </resources>
